--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_ROOT_PASSWORD = A@11223300
+DB_ROOT_PASSWORD = RootPassword
 DB_HOST = db
-DB_USER = musa
-DB_PASSWORD = Mus@11223300
+DB_USER = wordpress
+DB_PASSWORD = wordpress_password
 DB_NAME = wordpress
